--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p><strong>Email:</strong> <a href="mailto:topiyajenci27@gmail.com">topiyajenci27@gmailcom</a></p>
     </div>
     <div class="contact-item">
-        <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/your-linkedin" target="_blank">https://www.linkedin.com/in/topiya-jenci-482602233</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/your-linkedin" target="_blank">https://www.linkedin.com/in/topiya-jenci-jt</a></p>
     </div>
     <div class="contact-item">
         <p><strong>GitHub:</strong> <a href="https://github.com/jenci27" target="_blank">github.com/jenci27</a></p>
