--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>Passionate about building AI-powered applications and real-world problem solving.</p>
                 <div class="links">
                     <a href="https://github.com/jenci27" target="_blank">GitHub</a>
-                    <a href="https://www.linkedin.com/in/topiya-jenci-482602233" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/topiya-jenci-jt" target="_blank">LinkedIn</a>
                 </div>
             </div>
             <!-- <div class="photo">
